--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-# temp-host
-hosting some files
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>title</title>
+    <link rel="stylesheet" href="./assets/css/materialize.min.css">
+  </head>
+  <body>
+  
+  </body>
+</html>
